[tool.poetry]
name = "streamlit-sl-one-page"
version = "0.1.0"
description = "Streamlit app for the dbt Semantic Layer"
authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.25.0"
requests = "^2.31.0"
plotly = "^5.16.1"
adbc-driver-flightsql = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
